--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -17,4 +17,26 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name 165.22.111.149;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/165.22.111.149/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/165.22.111.149/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://165.22.111.149;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
 }
